# Pfinal_digitalesIII

./: CMakeLists.txt  acelerometro.c  acelerometro.h  frecuencia.c  frecuencia.h  lwipopts_examples_common.h  main.c  main.h  mqtt_sending.c  mqtt_sending.h
MqttToDatabase/: MqttToDatabase.sln
MqttToDatabase/MqttToDatabase/: MqttToDatabase.csproj  Program.cs  Publisher.cs
